<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kseniyaturava.mytest.MainActivity">

    <LinearLayout

        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlanco"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listViewMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BBDEFB">

        </ListView>

        <Button
            android:id="@+id/btInsertar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="15sp"
            android:visibility="invisible"
            android:text="@string/insertar_nueva_pelicula"
            />

    </LinearLayout>
    <!--inside id added for fragments(there're more options)-->

    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_gravity="bottom"
        android:background="#ffff">

        <!--shadow.xml inside-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:menu="@menu/menu_navigation" />
        <!-- android:layout_height="wrap_content"
         ALT+ENTER on design to add namespaces-->
        <!---->
    </FrameLayout>
    <!--</RelativeLayout>-->
</android.support.design.widget.CoordinatorLayout>

