...

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/ic_home"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search"
        tools:ignore="MenuTitle"/>

    <item
        android:id="@+id/formItem"
        android:icon="@drawable/ic_add"
...
