...
    <string name="anyo">Año</string>
    <string name="titulo_de_la_pelicula">Título de la Película</string>
    <string name="_2012">2012</string>
    <string name="genero">Género</string>
    <string name="categor_a">Categoría</string>
    <string name="_123_pel_culas">123 películas</string>
    <string name="insertar_nueva_pelicula">Insertar Nueva Pelicula</string>
    <string name="repita_pass">Repita la contraseña</string>
    <string name="escriba_pass">Escriba una contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="forocomments">foroComments</string>
    <string name="director2">Director</string>
    <string name="actores2">Actores</string>
    <string name="estrellas">estrellas</string>
    <string name="imagen">imagen</string>
    <string name="fecha">fecha</string>
...
