<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuProfile"
        android:title="Search"
        android:icon="@drawable/ic_settings24dp"

        app:showAsAction="always"  >
    </item>

</menu>
