...
                android:contentDescription="@string/iconright"
                app:srcCompat="@drawable/ic_right48" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_changePass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-2dp"
            android:layout_weight="1"
            android:background="@drawable/botton_style"
            android:orientation="horizontal"
...
